--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"homepage": "https://github.com/lesdominik/fer-web2-p2-security#readme",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"ejs": "^3.1.10",
 		"express": "^4.21.1"
 	}
 }
